--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,7 @@
     <color name="normalText">#E6FAFAFA</color>
     <color name="titoloText">#323232</color>
     <color name="backgroundHeaderTitolo">#C3C3C3</color>
+    <color name="invertedTextColor">#FF000000</color>
 
     <color name="black">#FF000000</color>
     <color name="Verde">#ff008c00</color>
