--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -76,15 +76,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/infoProviderText"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Fonte: JustWatch"
-                android:textColor="#B78A8A8A"
-                android:textSize="12sp" />
-
-            <TextView
                 android:id="@+id/DoveVederloText"
                 style="@style/Header"
                 android:layout_width="wrap_content"
@@ -92,6 +83,16 @@
                 android:layout_alignParentStart="true"
                 android:text="Dove Vederlo"
                 android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/infoProviderText"
+                style="@style/normalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-8sp"
+                android:text="Fonte: JustWatch"
+                android:textColor="#B78A8A8A"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
