--- a/app/src/main/res/layout/activity_aggiungi_media.xml
+++ b/app/src/main/res/layout/activity_aggiungi_media.xml
@@ -30,15 +30,33 @@
                     android:layout_height="54dp"
                     android:text="TitoloFilm" />
 
-                <TextView
-                    android:id="@+id/isFilm"
+                <LinearLayout
+                    android:id="@+id/isFilmAnnoUscitaHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Film o SerieTv "
-                    android:textColor="@color/invertedTextColor"
-                    android:textSize="16sp" />
+                    android:orientation="horizontal"
+                    android:textColor="@color/invertedTextColor">
 
+                    <TextView
+                        android:id="@+id/isFilm"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Film o SerieTv "
+                        android:textColor="@color/invertedTextColor"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/AnnoUscita"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="(1999)"
+                        android:textColor="@color/invertedTextColor"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
             </LinearLayout>
 
             <ImageView
@@ -53,7 +71,7 @@
 
             <LinearLayout
                 android:id="@+id/LayoutInfoFilm"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/poster"
                 android:layout_marginHorizontal="10dp"
@@ -72,7 +90,7 @@
                 <TextView
                     android:id="@+id/sinossiText"
                     style="@style/normalText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:gravity="start"
@@ -93,8 +111,7 @@
                     style="@style/normalText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="center" />
+                    android:layout_marginEnd="10dp" />
 
                 <TextView
                     android:id="@+id/crewCredits"
