--- a/app/src/main/res/layout/activity_ricerca.xml
+++ b/app/src/main/res/layout/activity_ricerca.xml
@@ -28,25 +28,42 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:backgroundTint="#4D9A9A9A"
-            android:src="@drawable/cross"
-            android:contentDescription="cancella query" />
+            android:contentDescription="cancella query"
+            android:src="@drawable/cross" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonToSearch"
-        style="@style/normalButton"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cercaAndCustomHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/searchBarDiv"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="Cerca" />
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/buttonToSearch"
+            style="@style/normalButton"
+            android:text="Cerca"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Button
+            android:id="@+id/addCustom"
+            style="@style/normalButton"
+            android:text="Custom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <GridView
         android:id="@+id/GridView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/buttonToSearch"
+        android:layout_below="@+id/cercaAndCustomHeader"
         android:numColumns="3"
         android:stretchMode="columnWidth" />
 
