--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,5 @@
     <color name="Viola">#ff852deb</color>
     <color name="Azzurro">#ff2d95eb</color>
     <color name="Rosso">#E6FF0E0E</color>
+    <color name="Grigio">#E6474747</color>
 </resources>
