--- a/app/src/main/res/layout/activity_ricerca.xml
+++ b/app/src/main/res/layout/activity_ricerca.xml
@@ -18,9 +18,10 @@
             android:id="@+id/searchBar"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:lines="1"
             android:inputType="text"
-            tools:ignore="LabelFor, Autofill" />
+            android:autofillHints="name"
+            android:hint="Titolo"/>
 
         <ImageButton
             android:id="@+id/buttonDeleteQuery"
@@ -32,40 +33,35 @@
             android:src="@drawable/cross" />
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/cercaAndCustomHeader"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/searchBarDiv"
+
+    <Button
+        android:id="@+id/buttonToSearch"
+        style="@style/normalButton"
+        android:layout_below="@+id/searchBarDiv"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:text="Cerca" />
 
-        <Button
-            android:id="@+id/buttonToSearch"
-            style="@style/normalButton"
-            android:text="Cerca"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <Button
-            android:id="@+id/addCustom"
-            style="@style/normalButton"
-            android:text="Custom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <GridView
         android:id="@+id/GridView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/cercaAndCustomHeader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/buttonToSearch"
         android:numColumns="3"
         android:stretchMode="columnWidth" />
 
+
+    <ImageButton
+        android:id="@+id/addCustom"
+        style="@style/normalImageButton"
+        android:paddingHorizontal="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/add_custom"
+        android:text="Custom" />
 
 </RelativeLayout>
