--- a/app/src/main/res/layout/fragment_film.xml
+++ b/app/src/main/res/layout/fragment_film.xml
@@ -12,4 +12,13 @@
         android:numColumns="3"
         android:stretchMode="columnWidth" />
 
+    <TextView
+        android:id="@+id/isEmptyText"
+        style="@style/Header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="La lista è vuota.\nAggiungi qualche film!"
+        android:alpha="0.9"/>
+
 </FrameLayout>
