--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -10,6 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="3"
-        android:stretchMode="columnWidth" />
+        android:stretchMode="columnWidth" >
+
+    </GridView>
+
+
+    <TextView
+        android:id="@+id/isEmptyText"
+        style="@style/Header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="La lista è vuota.\nAggiungi qualche serie!"
+        android:alpha="0.9"/>
 
 </FrameLayout>
