Fixed bugs and better UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="Azzurro">#ff2d95eb</color>
     <color name="Rosso">#E6FF0E0E</color>
     <color name="Grigio">#E6EAEAEA</color>
+    <color name="GrigioScuro">#E69E9E9E</color>
 </resources>
