--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -108,17 +108,14 @@
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switchLocal"
-            android:layout_width="187dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/plaformList"
-            android:layout_alignParentStart="true"
             android:layout_marginStart="14dp"
             android:layout_marginTop="10dp"
-            android:text="In Locale"
+            android:text="In Locale       "
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:theme="@style/SCBSwitch"
-            android:thumbTint="#69D31E" />
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/buttonDelete"
