--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,5 @@
     <color name="Azzurro">#ff2d95eb</color>
     <color name="Rosso">#E6FF0E0E</color>
     <color name="Grigio">#E6232323</color>
+    <color name="GrigioScuro">#E6808080</color>
 </resources>
