--- a/app/src/main/res/layout/activity_loading_screen.xml
+++ b/app/src/main/res/layout/activity_loading_screen.xml
@@ -5,6 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="false"
+    android:focusedByDefault="true"
+    android:focusableInTouchMode="false"
     tools:context="unitn.app.LoadingScreen">
 
     <ImageView
