--- a/app/src/main/res/layout/activity_profilo.xml
+++ b/app/src/main/res/layout/activity_profilo.xml
@@ -1,213 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context="unitn.app.Profilo">
+    tools:ignore="HardcodedText"
+    tools:context="unitn.app.activities.profilo.Profilo">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/titolo"
+        style="@style/HeaderTitolo"
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:text="Ciao, $NomeUtente" />
+
+    <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="unitn.app.Profilo">
+        android:foregroundGravity="center"
+        app:tabIndicatorFullWidth="true"
+        android:id="@+id/pageSelection"
+        app:tabTextColor="@color/normalText"
+        app:tabIndicatorColor="@color/normalText"
+        android:layout_below="@id/titolo"/>
 
-        <TextView
-            android:id="@+id/titolo"
-            style="@style/HeaderTitolo"
-            android:layout_width="match_parent"
-            android:layout_height="78dp"
-            android:text="Ciao, $NomeUtente" />
-
-        <LinearLayout
-            android:id="@+id/containerPiattaforme"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/titolo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/Header"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Seleziona le tue piattaforme" />
-
-            <CheckBox
-                android:id="@+id/netflixBox"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Netflix" />
-
-            <CheckBox
-                android:id="@+id/amazonPrimeBox"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Amazon Prime" />
-
-            <CheckBox
-                android:id="@+id/raiPlayBox"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Rai Play" />
+    <androidx.viewpager2.widget.ViewPager2
+        style="@style/viewPagerStyle"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/pageSelection" />
 
 
-            <CheckBox
-                android:id="@+id/disneyPlusBox"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Disney Plus" />
+    <ImageButton
+        android:id="@+id/buttonSave"
+        style="@style/normalImageButton"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="Salva e vai a homepage"
+        android:src="@drawable/checkmark"/>
 
-
-            <CheckBox
-                android:id="@+id/crunchyrollBox"
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Crunchyroll" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/infoSito"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/containerPiattaforme"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp">
-
-            <TextView
-                style="@style/Header"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Vuoi vedere la lista dal computer?\nVai su questo sito!"
-                android:textAlignment="textStart" />
-
-            <TextView
-                android:id="@+id/URLsito"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:gravity="center"
-                android:text="@string/link_to_the_website"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/scegliColore"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/infoSito"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="25dp"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp">
-
-            <TextView
-                style="@style/Header"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Scegli un colore" />
-
-            <Spinner
-                android:id="@+id/chooseColor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:spinnerMode="dropdown" />
-
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchTema"
-                android:layout_width="187dp"
-                android:layout_height="41dp"
-                android:text="Tema scuro" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/completamentoLista"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/scegliColore"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="25dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="30dp">
-
-            <TextView
-                style="@style/Header"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:text="Percentuale visti" />
-
-            <TextView
-                android:id="@+id/contenutiVistiEDaVedere"
-                style="@style/normalText"
-                android:layout_alignParentEnd="true"
-                android:text="$V/$daV"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-
-
-        <Button
-            android:id="@+id/buttonGoToSeen"
-            style="@style/normalButton"
-            android:layout_below="@id/completamentoLista"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:contentDescription="Vai a media già visti"
-            android:text="Visualizza la cronologia" />
-
-        <ImageButton
-            android:id="@+id/buttonSave"
-            style="@style/normalImageButton"
-            android:layout_below="@+id/buttonGoToSeen"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="60dp"
-            android:contentDescription="Salva e vai a homepage"
-            android:src="@drawable/checkmark" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/buttonSave"
-            android:layout_marginTop="45dp"
-            android:background="@color/normalText" />
-
-        <Button
-            android:id="@+id/buttonLogOff"
-            style="@style/normalButton"
-            android:layout_below="@id/buttonSave"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:backgroundTint="@color/GrigioScuro"
-            android:contentDescription="Esci dall'account"
-            android:text="Esci dall'account" />
-
-
-        <Button
-            android:id="@+id/buttonDeleteAccount"
-            style="@style/dangerousButton"
-            android:layout_below="@id/buttonLogOff"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="40dp"
-            android:contentDescription="Cancella l'account"
-            android:text="Cancella l'account" />
-
-    </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
