--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unitn.app.Login">
+    tools:context="unitn.app.activities.auth.Login">
 
     <TextView
         android:id="@+id/titoloPagina"
