--- a/app/src/main/res/layout/activity_ricerca.xml
+++ b/app/src/main/res/layout/activity_ricerca.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unitn.app.HomePage">
+    tools:context="unitn.app.activities.homepage.HomePage">
 
     <LinearLayout
         android:id="@+id/searchBarDiv"
